@@ -23,4 +23,9 @@ files to make psmisc speak different languages.  If your language is not
 supported then let me know, all it takes is translating one file in 
 a certain manner.
 
+Icons
+-----
+The pstree icons were drawn by Tatlin at Coresis who has given permission
+for them to be used for psmisc.
+
   - Craig
