@@ -92,5 +92,5 @@ Werner Almesberger <Werner.Almesberger@epfl.ch> wrote the original version
 of psmisc.  Since version 20 Craig Small <csmall@small.dropbear.id.au> 
 can be blamed.
 .SH "SEE ALSO"
-.BR kill (1), fuser (1), pgrep (1), pidof (1), ps (1), kill (2)
+.BR kill (1), fuser (1), pgrep (1), pidof (1), pkill (1), ps (1), kill (2)
 .\"{{{}}}
