@@ -1,0 +1,50 @@
+/* XPM */
+static char * icon_16x16_xpm[] = {
+"16 16 31 1",
+" 	c None",
+".	c #4E1C0D",
+"+	c #A1CDA4",
+"@	c #73F91C",
+"#	c #D4880C",
+"$	c #8D320A",
+"%	c #DE8F69",
+"&	c #67FC03",
+"*	c #AA6D53",
+"=	c #99F56C",
+"-	c #AA9177",
+";	c #AA4509",
+">	c #6CF10A",
+",	c #CB7502",
+"'	c #3B7529",
+")	c #D06938",
+"!	c #A5610F",
+"~	c #86D83B",
+"{	c #CC8346",
+"]	c #B97428",
+"^	c #864909",
+"/	c #7FF432",
+"(	c #C65707",
+"_	c #709081",
+":	c #BD300E",
+"<	c #68FC04",
+"[	c #A44C36",
+"}	c #757408",
+"|	c #60E804",
+"1	c #927136",
+"2	c #6D473C",
+"                ",
+"                ",
+"     ,,,  _     ",
+"    ,#%{,):     ",
+"    ###,]!({    ",
+"    %#{#,*;(:)  ",
+"   ##{]][^]$$;  ",
+" ,,{]#{());$:$1 ",
+" {,*:!^22:^%)$- ",
+" {)$-)^;:!$2.%1 ",
+" !(2._[!$$.*((+ ",
+"  {[*1}$..$!-   ",
+"       ^.       ",
+"       .'       ",
+"     _'.''      ",
+"                "};
